--- a/CSS/Flexbox/cards.html
+++ b/CSS/Flexbox/cards.html
@@ -3,28 +3,75 @@
 <style>
 	#flex-container {
 		display: flex;
-		/*flex-direction: row-reverse;*/
-		justify-content: space-around;
-		align-items: center;
+		flex-direction: column;
 		width: 500px;
 		height: 500px;
 		background: dimgrey;
 	} 
 
+	.flex-cell {
+		display: flex;
+	}
+
 	#flex-child-1 {
-		/*height: 100%;*/
-		background: gold;
+		height: 30%;
+		background: green;
 	}
 
 	#flex-child-2 {
-		/*height: 100%;*/
-		background: tomato;  
+		height: 65%;
+		background: yellow; 
+	}
+
+	#flex-child-3 {
+		height: 15%;
+		background: red; 
+	}
+
+	.flex-span {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		width: 100%;
+	}
+
+	#flex-span-1 {
+		width: 20%;
+	}
+
+	#flex-span-2 {
+		width: 60%;
+	}
+
+	#flex-span-2 div {
+		text-align: center;
+	}
+
+	#flex-span-3 {
+		width: 20%;
+	}
+
+	#email {
+		font-size: 30px;
 	}
 </style>
 <body>
 	<div id="flex-container">
-		<div id="flex-child-1">child-one</div>
-		<div id="flex-child-2">child-two</div>
+		<div id="flex-child-1" class="flex-cell">
+			<div id="flex-span-1" class="flex-span">child-one</div>
+			<div id="flex-span-2" class="flex-span">
+				<div>
+					<span id="email">@CJTaylor</span>
+				</div>
+			</div>
+			<div id="flex-span-3" class="flex-span">child-three</div>
+		</div>
+		<div id="flex-child-2" class="flex-cell">
+			<span class="flex-span">child-one</span>
+		</div>
+		<div id="flex-child-3" class="flex-cell">
+			<span class="flex-span">child-two</span>
+		</div>
 	</div>
 </body>
 </html>
