--- a/CSS/Grid/grid.html
+++ b/CSS/Grid/grid.html
@@ -72,6 +72,55 @@
 		border: 1.5px solid #fff;
 		border-radius: 10px;
 	}
+
+	.grid-box-II {
+		display: grid;
+		margin-top: 10px;
+		grid-template-rows: repeat(2, 100px);
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-areas: "a a a a"
+							 "b b c c";
+		grid-gap: 10px;
+	}
+
+	.grid-box-II div:nth-child(odd) {
+		background-color: silver;
+	}
+
+	.grid-box-II div:nth-child(even) {
+		background-color: darkgrey;
+	}
+
+	#a {
+		grid-area: a;
+		text-align: center;
+	}
+
+	#b {
+		grid-area: b;
+		text-align: center;
+	}
+
+	#c {
+		grid-area: c;
+		text-align: center;
+	}
+
+	.grid-box-III {
+		display: grid;
+		margin-top: 10px;
+		grid-template-rows: 100px;
+		grid-auto-flow: column; 
+		grid-gap: 10px;
+	}
+
+	.grid-box-III div:nth-child(odd) {
+		background-color: silver;
+	}
+
+	.grid-box-III div:nth-child(even) {
+		background-color: darkgrey;
+	}
 </style>
 <body>
 	<div class="grid-box">
@@ -88,6 +137,17 @@
 		<span id="six" class="grid-item">ITEM SIX</span>
 		<span id="seven" class="grid-item">ITEM SEVEN</span>
 		<span id="eight" class="grid-item">ITEM EIGHT</span>
+	</div>
+	<div class="grid-box-II">
+		<div id="a">a</div>
+		<div id="b">b</div>
+		<div id="c">c</div>
+	</div>
+	<div class="grid-box-III">
+		<div id="d">d</div>
+		<div id="e">e</div>
+		<div id="f">f</div>
+		<div id="g">g</div>
 	</div>
 </body>
 
