--- a/CSS/Grid/grid.html
+++ b/CSS/Grid/grid.html
@@ -108,18 +108,72 @@
 
 	.grid-box-III {
 		display: grid;
+		height: 500px;
 		margin-top: 10px;
-		grid-template-rows: 100px;
-		grid-auto-flow: column; 
+		padding: 5px;
+		grid-template-rows: repeat(2, 100px);
+		grid-template-columns: repeat(2, 300px);
+		grid-template-areas: "a b"
+							 "c d";
 		grid-gap: 10px;
+		border: 1.5px solid black;
+		background-color: antiquewhite;
+	}
+
+	#e, #g {
+		color: #fff;
+	}
+
+	#e {
+		grid-area: c;
+	}
+
+	#f {
+		grid-area: d;
 	}
 
 	.grid-box-III div:nth-child(odd) {
-		background-color: silver;
+		background-color: gold;
 	}
 
 	.grid-box-III div:nth-child(even) {
-		background-color: darkgrey;
+		background-color: black;
+	}
+
+
+	#d, #II {
+		display: grid;
+		grid-template-rows: repeat(2, 1fr);
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-areas: "a b"
+							 "c d";
+		grid-gap: 10px;
+	}
+
+	#d div:nth-child(odd) {
+		background-color: lightblue;
+	}
+
+	#d div:nth-child(even) {
+		background-color: crimson;
+	}
+
+	#III {
+		grid-area: d;
+	}
+
+
+
+	#II div:nth-child(odd) {
+		background-color: forestgreen;
+	}
+
+	#II div:nth-child(even) {
+		background-color: hotpink;
+	}
+
+	#tre {
+		grid-area: d;
 	}
 </style>
 <body>
@@ -144,7 +198,17 @@
 		<div id="c">c</div>
 	</div>
 	<div class="grid-box-III">
-		<div id="d">d</div>
+		<div id="d">
+			<div id="I"></div>
+			<div id="II">
+				<div id="uno"></div>
+				<div id="duo"></div>
+				<div id="tre"></div>
+				<div id="quatro"></div>
+			</div>
+			<div id="III"></div>
+			<div id="IV"></div>
+		</div>
 		<div id="e">e</div>
 		<div id="f">f</div>
 		<div id="g">g</div>
